public/stylesheets/sites/layout.css
/* ... */
div#footer_sites div.project p {float:left; padding:0; margin:5px 0 0 0 ; font:normal 13px "PT Sans"; color:#B3B3B3;}
div#footer_sites div.project p a {color:#B3B3B3;}
div#footer_sites div.project p a:hover {text-decoration:underline;}
div#footer_sites div.project p.site_name {font:normal 13px "PT Sans Bold"; width:100%;}
div#footer_sites div.project p.all_rights {width:550px;}
div#footer_sites div.project p.all_rights a.link {color:#B3B3B3; text-decoration:underline;}
div#footer_sites div.project p.all_rights a.link:hover {color:#999999; cursor:pointer;}
div#footer_sites div.project p.site_name a {color:#B3B3B3; text-decoration:underline;}
div#footer_sites div.project p.site_name a:hover {color:#999999; cursor:pointer;}


/* FOOTER PAGES */
div#footer_pages {clear:both; width:100%; padding:100px 0 100px 0;}
div#footer_pages div.left {width:450px; height:auto!important; margin:0 0 0 5px; background:none; display:inline-block; vertical-align:top; display:-moz-inline-stack; zoom:1; *display:inline;}
div#project_layout div#footer_pages div.left {width:450px; height:auto!important; margin:0 0 0 30px; background:none; display:inline-block; vertical-align:top; display:-moz-inline-stack; zoom:1; *display:inline;}
div#footer_pages div.left a.logo {float:left; display:block; width:67px; height:43px; margin:0 15px 0 0; background:url('/images/sites/common/logo_interaction.png') no-repeat 0 0;}
div#footer_pages div.left a.logo:hover {cursor:pointer;}
div#footer_pages div.left div.project {float:left; width:350px; display:inline-block; vertical-align:top; display:-moz-inline-stack; zoom:1; *display:inline;}
div#footer_pages div.left div.project h1 {float:left; width:100%; margin:0; padding:0; font:normal 13px "PT Sans Bold"; color:#888888; text-transform:uppercase;}
div#footer_pages div.left div.project h1 a{float:left; padding:0; margin:0; font:normal 13px "PT Sans Bold"; color:#888888; text-transform:uppercase; width:100%;}
div#footer_pages div.left div.project p {float:left; padding:0; margin:5px 0 0 0 ; font:normal 13px "PT Sans"; color:#B3B3B3;}
div#footer_pages div.left div.project p a {color:#B3B3B3;}
div#footer_pages div.left div.project p a:hover {text-decoration:underline;}
div#footer_pages div.left div.project p.site_name {font:normal 13px "PT Sans Bold"; width:100%;}
div#footer_pages div.left div.project p.all_rights {width:550px;}
div#footer_pages div.left div.project p.all_rights a.link {color:#B3B3B3; text-decoration:underline;}
div#footer_pages div.left div.project p.all_rights a.link:hover {color:#999999; cursor:pointer;}
div#footer_pages div.left div.project p.site_name a {color:#B3B3B3; text-decoration:underline;}
div#footer_pages div.left div.project p.site_name a:hover {color:#999999; cursor:pointer;}
div#footer_pages div.right {width:400px; margin:0; display:inline-block; vertical-align:top; display:-moz-inline-stack; zoom:1; *display:inline; text-align:right;}
div#project_layout div#footer_pages div.right {width:350px; margin:0; display:inline-block; vertical-align:top; display:-moz-inline-stack; zoom:1; *display:inline; text-align:right;}
div#footer_pages div.right ul {margin:5px 0 0 0; padding:0; display:inline-block; vertical-align:top; display:-moz-inline-stack; zoom:1; *display:inline;  text-align: right;}
div#footer_pages div.right ul li {margin:0 0 0 6px; padding:0; font:normal 13px "PT Sans"; color:#B3B3B3; display:inline-block; vertical-align:top; display:-moz-inline-stack; zoom:1; *display:inline;  text-align: right;}
div#footer_pages div.right ul li a {color:#B3B3B3;text-decoration:underline;   text-align: right;}
div#footer_pages div.right ul li a:hover {color:#999999; cursor:pointer;}

/*FOOTER ERRORS*/
div#footer_errors {clear:both; width:100%; padding:100px 0 100px 0;}
div#footer_errors div.left {width:660px; height:auto!important; margin:0 0 0 5px; background:none; display:inline-block; vertical-align:top; display:-moz-inline-stack; zoom:1; *display:inline;}
div#footer_errors div.left a.logo {float:left; display:block; width:67px; height:43px; margin:0 15px 0 0; background:url('/images/sites/common/logo_interaction.png') no-repeat 0 0;}
div#footer_errors div.left a.logo:hover {cursor:pointer;}
div#footer_errors div.left div.project {float:left; width:450px; display:inline-block; vertical-align:top; display:-moz-inline-stack; zoom:1; *display:inline;}
div#footer_errors div.left div.project h1 {float:left; width:100%; margin:0; padding:0; font:normal 13px "PT Sans Bold"; color:#888888; text-transform:uppercase;}
div#footer_errors div.left div.project h1 a{float:left; padding:0; margin:0; font:normal 13px "PT Sans Bold"; color:#888888; text-transform:uppercase; width:100%;}
div#footer_errors div.left div.project p {float:left; padding:0; margin:5px 0 0 0 ; font:normal 13px "PT Sans"; color:#B3B3B3;}
div#footer_errors div.left div.project p a {color:#B3B3B3;}
div#footer_errors div.left div.project p a:hover {text-decoration:underline;}
div#footer_errors div.right {width:auto; margin:0; display:inline-block; vertical-align:top; display:-moz-inline-stack; zoom:1; *display:inline; text-align:right;}
div#footer_errors div.right ul {float:left; margin:19px 0 0 0; padding:0; display:inline-block; vertical-align:top; display:-moz-inline-stack; zoom:1; *display:inline;}
div#footer_errors div.right ul li {margin:0 0 0 6px; padding:0; font:normal 13px "PT Sans"; color:#B3B3B3; display:inline-block; vertical-align:top; display:-moz-inline-stack; zoom:1; *display:inline;}
div#footer_errors div.right ul li a {color:#B3B3B3;}
div#footer_errors div.right ul li a:hover {text-decoration:underline;}

/* FOOTER OTHER */
div#footer {clear:both; width:100%; padding:100px 0 100px 0;}
div#footer div.right {float: left; width:850px; margin:5px 0 0 10px; background:none; display:inline-block; vertical-align:top; display:-moz-inline-stack; zoom:1; *display:inline;}
/* ... */

